--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,7 +111,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
     height: 100vh;
     border-radius: 5px;
     gap: 15px;
